<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_back">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/back_ground">
        <ImageView
            android:id="@+id/alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_access_alarms_black_24dp" />
        <TextView
            android:id="@+id/first_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_string"
            android:textSize="30dp"
            android:layout_toEndOf="@+id/alarm"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:id="@+id/first_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/back_ground">
        <ImageView
            android:id="@+id/report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_report" />
        <TextView
            android:id="@+id/second_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_string"
            android:textSize="30dp"
            android:layout_toEndOf="@+id/report"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:id="@+id/second_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="clip_vertical"
        android:background="@drawable/back_ground">
        <ImageView
            android:id="@+id/reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reminder" />
        <TextView
            android:id="@+id/third_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_string"
            android:textSize="30dp"
            android:layout_toEndOf="@+id/reminder"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:id="@+id/third_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/back_ground">
        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings" />
        <TextView
            android:id="@+id/fourth_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_string"
            android:textSize="30dp"
            android:layout_toEndOf="@+id/settings"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:id="@+id/fourth_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:background="@drawable/back_ground">
        <ImageView
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_restore_black_24dp" />
        <TextView
            android:id="@+id/fifth_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_string"
            android:textSize="30dp"
            android:layout_toEndOf="@+id/restart"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"/>
        <ImageView
            android:id="@+id/fifth_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>