<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_back"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <Button
        android:id="@+id/btnRLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/layout_01"
        android:background="@color/white"
        android:textColor="@color/color_back"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/hard_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seventh_string"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/eighth_string"
            android:background="@drawable/button"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:background="@drawable/first_panel"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/first_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_radio"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/first_circle"
            android:layout_marginStart="40dp">
        <TextView
            android:id="@+id/full_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_string"
            android:textColor="@color/white"
            android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_below="@id/full_string"
                android:layout_marginTop="10dp"
                android:padding="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_grey"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_grey"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_grey"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:background="@drawable/second_panel"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/second_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_radio"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/second_circle"
            android:layout_marginStart="40dp">
            <TextView
                android:id="@+id/chest_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest_string"
                android:textColor="@color/white"
                android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_below="@id/chest_string"
                android:layout_marginTop="10dp"
                android:padding="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:background="@drawable/third_panel"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/third_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_radio"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/third_circle"
            android:layout_marginStart="40dp">
            <TextView
                android:id="@+id/abs_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abs_string"
                android:textColor="@color/white"
                android:textSize="30dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_below="@id/abs_string"
                android:layout_marginTop="10dp"
                android:padding="10dp">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_white"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>